Refactored index.html, navlinks

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/images/uÇ-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Utku Çam" />
@@ -10,49 +10,21 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Utku Çam | Web Developer Porfolio</title>
 
-    <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
 
-    <!-- bootstrap cdns -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <!-- google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i"
       rel="stylesheet"
     />
-
-    <!-- terminal effect -->
-    <script src="script/t.min.js"></script>
-
-    <!-- for on scroll animations -->
-    <link rel="stylesheet" href="css/animate.css" />
-    <script src="script/wow.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <script defer src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script defer type="text/javascript">
-      $('#toggle').click(function () {
-        $(this).toggleClass('on');
-        $('#resize').toggleClass('active');
-      });
-
-      $('#resize ul li a').click(function () {
-        $(this).toggleClass('on');
-        $('#resize').toggleClass('active');
-      });
-
-      $('.close-btn').click(function () {
-        $(this).toggleClass('on');
-        $('#resize').toggleClass('active');
-      });
-    </script>
   </body>
 </html>
